array.island.Island.scala.error
Erreur de compilation :
Island:5: error: type mismatch;
 found   : Unit
 required: Int
  for (x <- num){
         ^