array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var niveau = 0
  var max = 0
  for (x <- num){
    if (x > max){
      max = x
      niveau = x
    }
    if (x == 0){
      max = 0
    }
    
  }
}